[#17] feat: 관광지 테이블 언어 별 분리 - ko, en 관광지 테이블 분리 - 데이터 파이프라인 수정