@@ -2,12 +2,10 @@ package com.earseo.sight.service;
 
 import com.earseo.sight.dto.etl.DocentItemDto;
 import com.earseo.sight.dto.etl.SightItemDto;
-import com.earseo.sight.entity.Docent;
-import com.earseo.sight.entity.Sight;
-import com.earseo.sight.entity.SubTheme;
-import com.earseo.sight.entity.Theme;
+import com.earseo.sight.entity.*;
 import com.earseo.sight.repository.DocentRepository;
-import com.earseo.sight.repository.SightRepository;
+import com.earseo.sight.repository.EnSightRepository;
+import com.earseo.sight.repository.KoSightRepository;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -15,6 +13,7 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.Point;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
 
@@ -25,15 +24,20 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class InitService {
 
-    private final SightRepository sightRepository;
+    private final KoSightRepository koSightRepository;
+    private final EnSightRepository enSightRepository;
     private final DocentRepository docentRepository;
     private final GeometryFactory geometryFactory = new GeometryFactory();
     private final ObjectMapper objectMapper;
 
+    @Value("${cloud.aws.cloudfront.domain}")
+    private String cloudFrontDomain;
+
     @Transactional
-    public void initSight() {
+    public void initSight(String lang) {
         RestClient client = RestClient.create();
-        String cdnUrl = "https://cdn.earseo.click/core/master/master_data_.json";
+        String s3Key = String.format("core/master/master_data_%s_.json", lang);
+        String cdnUrl = getCloudFrontDomain(s3Key);
 
         try {
             JsonNode jsonContent = client.get()
@@ -47,20 +51,30 @@ public class InitService {
                     }
             );
 
-            List<Sight> sights = dtos.stream()
-                    .map(this::convertSight)
-                    .collect(Collectors.toList());
+            if(lang.equals("en")) {
+                List<EnSight> sights = dtos.stream()
+                        .map(this::convertEnSight)
+                        .toList();
 
-            sightRepository.saveAll(sights);
+                enSightRepository.saveAll(sights);
+            } else {
+                List<KoSight> sights = dtos.stream()
+                        .map(this::convertKoSight)
+                        .toList();
+
+                koSightRepository.saveAll(sights);
+            }
+
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
 
     @Transactional
-    public void initDocent() {
+    public void initDocent(String lang) {
         RestClient client = RestClient.create();
-        String cdnUrl = "https://cdn.earseo.click/core/docent/docent_data.json";
+        String s3Key = String.format("core/master/docent_data.json", lang);
+        String cdnUrl = getCloudFrontDomain(s3Key);
 
         try {
             JsonNode jsonContent = client.get()
@@ -84,34 +98,52 @@ public class InitService {
         }
     }
 
-    private Sight convertSight(SightItemDto dto) {
+    private KoSight convertKoSight(SightItemDto dto) {
         Point geom = null;
         if (dto.mapX() != null && dto.mapY() != null) {
             geom = geometryFactory.createPoint(new org.locationtech.jts.geom.Coordinate(dto.mapX(), dto.mapY()));
         }
 
-        return Sight.builder().
+        return KoSight.builder().
                 contentId(dto.contentId())
-                .contentTypeId(dto.contentTypeId())
-                .cat1(Theme.valueOf(dto.cat1()))
-                .cat2(SubTheme.valueOf(dto.cat2()))
-                .cat3(dto.cat3())
-                .ocat1(dto.ocat1())
-                .ocat2(dto.ocat2())
-                .ocat3(dto.ocat3())
-                .outl(dto.outl())
+                .theme(Theme.valueOf(dto.cat1Code()))
+                .subTheme(SubTheme.valueOf(dto.cat2Code()))
                 .title(dto.title())
                 .addr1(dto.addr1())
                 .addr2(dto.addr2())
                 .addr3(dto.addr3())
                 .mapX(dto.mapX())
                 .mapY(dto.mapY())
-                .modifiedtime(dto.modifiedtime())
                 .tel(dto.tel())
-                .mLevel(dto.mLevel())
                 .overview(dto.overview())
                 .originImgUrl(dto.originImgUrl())
-                .smallImgUrl(dto.smallImgUrl())
+                .usetime(dto.usetime())
+                .restdate(dto.restdate())
+                .parking(dto.parking())
+                .usefee(dto.usefee())
+                .geom(geom)
+                .build();
+    }
+
+    private EnSight convertEnSight(SightItemDto dto) {
+        Point geom = null;
+        if (dto.mapX() != null && dto.mapY() != null) {
+            geom = geometryFactory.createPoint(new org.locationtech.jts.geom.Coordinate(dto.mapX(), dto.mapY()));
+        }
+
+        return EnSight.builder().
+                contentId(dto.contentId())
+                .theme(Theme.valueOf(dto.cat1Code()))
+                .subTheme(SubTheme.valueOf(dto.cat2Code()))
+                .title(dto.title())
+                .addr1(dto.addr1())
+                .addr2(dto.addr2())
+                .addr3(dto.addr3())
+                .mapX(dto.mapX())
+                .mapY(dto.mapY())
+                .tel(dto.tel())
+                .overview(dto.overview())
+                .originImgUrl(dto.originImgUrl())
                 .usetime(dto.usetime())
                 .restdate(dto.restdate())
                 .parking(dto.parking())
@@ -126,5 +158,9 @@ public class InitService {
                 .script(dto.script())
                 .docentUrl(dto.docentUrl())
                 .build();
+    }
+
+    private String getCloudFrontDomain(String s3Key){
+        return String.format("%s/%s", cloudFrontDomain, s3Key);
     }
 }
